--- a/jajoo/web/templates/template.html
+++ b/jajoo/web/templates/template.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="{% static 'favicon.ico' %}">
 
-    <title>بستون،  پول کجاست؟</title>
+    <title>جاجو</title>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/bootstrap-rtl.css' %}" crossorigin="anonymous">
@@ -43,17 +43,16 @@
                     </button>
 
                     <a class="navbar-brand" href="{% url 'index' %}">			                
-                      بستون
+                      جاجو
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-left">
                     {% if user.is_authenticated %}
-                    <!--<li><a href="/static/todoer_release.apk">اپ اندروید</a></li>-->
                     <li><a href="{% url 'logout' %}">خروج</a></li>
                     {% else %}
-                    <li><a href="{% url 'register' %}">ثبت نام</a></li>
+                    <li><a href="{% url 'register' %}">ثبت نام</a></li><li><a href="{% url 'login' %}">ورود</a></li>
                     <!--<li><a href="/static/todoer_release.apk">اپ اندروید</a></li>-->
                     {% endif %}
                   </ul>
@@ -78,9 +77,8 @@
             <div class="">
 
               <p>
-                <strong>بستون</strong> یک پروژهٔ آزاد و متن‌باز است.<br>
-			<a href="https://github.com/jadijadi/bestoon">مخرن گیت‌هاب پروژه</a> |
-			<a href="http://gapper.ir/channel/bestoon">گزارش مشکلات و پیشنهادها</a>
+                <strong>جادو</strong> پروژه مهندسی نرم افزار ۲ شهاب کریمی و کیوان مظاهری<br>
+			<a href="https://github.com/Shabo0oli/jajoo">مخرن گیت‌هاب پروژه</a>
               </p>
             </div>
           </div>
