--- a/jajoo/web/templates/register.html
+++ b/jajoo/web/templates/register.html
@@ -26,13 +26,7 @@
 <p>
 اگر اینجا هستین حتما می دونین ماجرا چیه، برای عضو شدن از فرم زیر شروع کنین
 </p>
-<p>
-  البته این فعلا یک سیستم شخصی است و این یک نکته مثبته: من این رو برای استفاده خودم توسعه می دم و در نتیجه دائما باید برای یک استفاده کننده واقعی بهینه بشه. اگر شما
-  هم گپ یا پیشنهادی درموردش داشتین
-  <a href="http://gapper.ir/channel/bestoon">
-    اینجا بنویسین و خونده خواهد شد
-  </a>
-</p>
+
 
   {% if message %}
   <div class="bs-callout bs-callout-info">
@@ -70,6 +64,12 @@
               <label for="inputPassword3" class="col-sm-2 control-label" >کلمه عبور</label>
               <div class="col-sm-10">
                 <input type="password" name="password" class="form-control"  placeholder="حداقل پنج کاراکتر" required pattern=".{5,}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="phone" class="col-sm-2 control-label" >شماره تلفن همراه</label>
+              <div class="col-sm-10">
+                <input type="text" name="phone" class="form-control" placeholder="+989xxxxxxxxx" required pattern="+989.+">
               </div>
             </div>
             <div class="form-group">
