place page table and tab

--- a/jajoo/web/templates/index.html
+++ b/jajoo/web/templates/index.html
@@ -22,7 +22,7 @@
 						<p>آدرس : {{ place.Address }}</p>
 						<div class="row">
 							<div class="col-md-6">
-								<a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> مشاهده بیشتر</a></div>
+								<a href="http://localhost:8009/place/{{ place.id }}/" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span> مشاهده بیشتر</a></div>
 						</div>
 
 						<p> </p>
