--- a/jajoo/web/templates/place.html
+++ b/jajoo/web/templates/place.html
@@ -6,9 +6,13 @@
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#spec">مشخصات و امکانات</a></li>
     <li><a data-toggle="tab" href="#comment"> نظرات </a></li>
-    <li><a data-toggle="tab" href="#">رزرو مکان</a></li>
+    <li><a data-toggle="tab" href="#booking">رزرو مکان</a></li>
   </ul>
 <div class="tab-content">
+<div class="row tab-pane fade" id="booking">
+    <p> khobi </p>
+</div>
+    
 <div class="row tab-pane fade" id="comment">
     <p> salam </p>
 </div>
