--- a/jajoo/web/templates/template.html
+++ b/jajoo/web/templates/template.html
@@ -46,6 +46,16 @@
                       جاجو
                     </a>
                 </div>
+                <div class="col-sm-4 col-md-4 pull-right" style="margin-right: 35%;">
+		            <form class="navbar-form" role="search">
+		                <div class="input-group">
+			                <input type="text" class="form-control" placeholder="جستجو مکان در ..." name="srch-term" id="srch-term">
+			                <div class="input-group-btn">
+				                <button class="btn btn-default" type="submit">       جستجو       <i class="fa fa-search" aria-hidden="true"></i></button>
+			                </div>
+	                	</div>
+		            </form>
+		        </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-left">
