--- a/jajoo/web/templates/place.html
+++ b/jajoo/web/templates/place.html
@@ -29,6 +29,16 @@
             </div>
         </div>
     {% endfor %}
+    <div class="row" style="margin-top: 20px">
+    <form role="form" method="post" action="{% url 'comment' %}">
+    <div class="form-group">
+        {% csrf_token %}
+        <textarea class="form-control" id="textcomment" rows="3" name="textcomment" placeholder="نظر شما . . ."></textarea>
+        <input type="hidden" name="place" value="{{ place.id }}" />
+        <input id="submit" name="submit" type="submit" value="ارسال نظر" class="btn btn-primary">
+    </div>
+    </form>
+</div>
 </div>
 
 <div class="row tab-pane fade" id="booking">
