--- a/jajoo/web/templates/template.html
+++ b/jajoo/web/templates/template.html
@@ -64,7 +64,7 @@
                       جاجو
                     </a>
                 </div>
-                <div class="col-sm-4 col-md-4 pull-right" style="margin-right: 35%;">
+                <div class="col-sm-4 col-md-4 pull-right" style="margin-right: 25%;">
 		            <form method="post" action="/search/" class="navbar-form" role="search">
                         {% csrf_token %}
 		                <div class="input-group">
@@ -79,7 +79,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-left">
                     {% if user.is_authenticated %}
-                    <li> <a href="{% url 'myrequest' %}"> درخواست های رزرو</a> </li><li><a href="{% url 'logout' %}">خروج</a></li><li><img id="avatar" src="http://localhost:8009/{{ request.session.userInfo }}" ></li>
+                    <li> <a href="{% url 'addplace' %}"> ایجاد مکان </a> </li><li> <a href="{% url 'myrequest' %}"> درخواست های رزرو</a> </li><li><a href="{% url 'logout' %}">خروج</a></li><li><img id="avatar" src="http://localhost:8009/{{ request.session.userInfo }}" ></li>
                     {% else %}
                     <li><a href="{% url 'register' %}">ثبت نام</a></li><li><a href="{% url 'login' %}">ورود</a></li>
                     <!--<li><a href="/static/todoer_release.apk">اپ اندروید</a></li>-->
