--- a/jajoo/web/templates/addplace.html
+++ b/jajoo/web/templates/addplace.html
@@ -66,27 +66,27 @@
             <div class="form-group">
               <label for="id_HasParking" class="col-sm-2 control-label" >پارکینگ</label>
               <div class="col-sm-10">
-                <input type="checkbox" name="HasParking" id="id_HasParking">
+                <input type="radio" name="HasParking" id="id_HasParking" value="1">
               </div>
             </div>
             <div class="form-group">
               <label for="id_HasWifi" class="col-sm-2 control-label" >اینترنت</label>
               <div class="col-sm-10">
-                <input type="checkbox" name="HasWifi" id="id_HasWifi">
+                <input type="radio" name="HasWifi" id="id_HasWifi" value="1">
               </div>
             </div>
 
             <div class="form-group">
               <label for="id_HasBath" class="col-sm-2 control-label" >حمام</label>
               <div class="col-sm-10">
-                <input type="checkbox" name="Has‌Bath" id="id_HasBath">
+                <input type="radio" name="Has‌Bath" id="id_HasBath" value="1">
               </div>
             </div>
 
             <div class="form-group">
               <label for="id_HasTv" class="col-sm-2 control-label" >تلویزیون</label>
               <div class="col-sm-10">
-                <input type="checkbox" name="Has‌Tv" id="id_HasTv">
+                <input type="radio" name="Has‌Tv" id="id_HasTv" value="1">
               </div>
             </div>
             <div class="form-group">
